--- a/pom.xml
+++ b/pom.xml
@@ -49,6 +49,13 @@
 		</dependency>
 
 
+		<!-- https://mvnrepository.com/artifact/com.mysql/mysql-connector-j -->
+		<dependency>
+			<groupId>com.mysql</groupId>
+			<artifactId>mysql-connector-j</artifactId>
+		</dependency>
+
+
 	</dependencies>
 
 	<build>
